; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c_create_mod_app_status.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c_create_mod_app_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i32 }
%struct.bt_mesh_model = type { i32 }

@OP_MOD_APP_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_buf_simple*, %struct.bt_mesh_model*, i32, i32, i32, i32, i32*)* @create_mod_app_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_mod_app_status(%struct.net_buf_simple* %0, %struct.bt_mesh_model* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca %struct.net_buf_simple*, align 8
  %9 = alloca %struct.bt_mesh_model*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %8, align 8
  store %struct.bt_mesh_model* %1, %struct.bt_mesh_model** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  %15 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %16 = load i32, i32* @OP_MOD_APP_STATUS, align 4
  %17 = call i32 @bt_mesh_model_msg_init(%struct.net_buf_simple* %15, i32 %16)
  %18 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %19 = load i32, i32* %13, align 4
  %20 = call i32 @net_buf_simple_add_u8(%struct.net_buf_simple* %18, i32 %19)
  %21 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %22 = load i32, i32* %11, align 4
  %23 = call i32 @net_buf_simple_add_le16(%struct.net_buf_simple* %21, i32 %22)
  %24 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @net_buf_simple_add_le16(%struct.net_buf_simple* %24, i32 %25)
  %27 = load i32, i32* %10, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %7
  %30 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %31 = call i32 @net_buf_simple_add(%struct.net_buf_simple* %30, i32 4)
  %32 = load i32*, i32** %14, align 8
  %33 = call i32 @memcpy(i32 %31, i32* %32, i32 4)
  br label %39

34:                                               ; preds = %7
  %35 = load %struct.net_buf_simple*, %struct.net_buf_simple** %8, align 8
  %36 = call i32 @net_buf_simple_add(%struct.net_buf_simple* %35, i32 2)
  %37 = load i32*, i32** %14, align 8
  %38 = call i32 @memcpy(i32 %36, i32* %37, i32 2)
  br label %39

39:                                               ; preds = %34, %29
  ret void
}

declare dso_local i32 @bt_mesh_model_msg_init(%struct.net_buf_simple*, i32) #1

declare dso_local i32 @net_buf_simple_add_u8(%struct.net_buf_simple*, i32) #1

declare dso_local i32 @net_buf_simple_add_le16(%struct.net_buf_simple*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @net_buf_simple_add(%struct.net_buf_simple*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
